<resources>
    <string name="app_name">STE</string>
    <string name="main_title">Iniciar Sesion</string>
    <string name="main_usuario">Usuario</string>
    <string name="main_pass">Contraseña</string>
    <string name="main_button">Iniciar Sesion</string>

    <string name="open_nav">Open Navigation</string>
    <string name="close_nav">Close Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Menu -->
    <string name="nav_home">Inicio</string>
    <string name="nav_location">Localizador</string>
    <string name="nav_news">Noticias</string>
    <string name="nav_payment">Pago</string>
    <string name="nav_logout">Cerrar Sesion</string>
    <!-- Menu -->


    <!-- Menu Chofer -->
    <string name="nav_lector">Lector Qr</string>
    <string name="nav_ubicacion">Ubicacion</string>
    <!-- Menu Chofer-->


</resources>