<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/nav_home"/>

        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/nav_location"
            android:title="@string/nav_location"/>

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/nav_payment"
            android:title="@string/nav_payment"/>

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/nav_news"
            android:title="@string/nav_news"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/nav_logout"
                android:title="@string/nav_logout"/>
        </menu>

    </item>

</menu>